326 ==> 431497 - Unconfiremd Faces Counter has an Offset.
327 ==> 437554 - Export to local Storage : Add an export with direct extension of the files in jpg (Not jpeg).
328 ==> 436695 - [opensuse 15.2] unable to resize images (all types).
329 ==> 427403 - Export multiple albums - Exported folder structure shall represent album structure.
330 ==> 436120 - [Suggestion] Keep the tree structure in "Export to a local device".
331 ==> 437655 - Store fuzzy search without a name.
332 ==> 437680 - Crash if Geolocation editor is closed while coordinates are still being updated.
333 ==> 437682 - Strange activity - If a year (2007) with date subdirectories is selected from the Album.
334 ==> 437708 - Face tag spanning entire image added for photos taken with Windows Phone.
335 ==> 437750 - digiKam causes 20 exiftool (32) .exe to run in the Task Manager panel at the end of the day W10.
336 ==> 437714 - A search group of this or another search is added to existing searches when editing them.
337 ==> 437769 - Search-Table view / After suspending - ERROR:directory_reader_win.cc(43).
338 ==> 437813 - Exiftool.exe is preventing the installation.
339 ==> 437657 - Size of dialog for database migration.
340 ==> 437897 - Windows timestamp to metadata extraction for TIFFs changes when modifying files.
341 ==> 397999 - Sort thumbs by date. causes issues.
342 ==> 437736 - digiKam 7.3 doesn't have a Translators tab in its About dialogue anymore.
343 ==> 438093 - digiKam po file no longer has any information about translators.
344 ==> 438120 - Geolocation data not being saved.
345 ==> 438134 - Unexpected behaviour of face overlay in preview window.
346 ==> 438248 - W10 Sysinternals Process Monitor digikam Cannot create files digikam4.db-journal; digikam4.db-wal.
347 ==> 428964 - Crash updating fingerprints before checking similarities.
348 ==> 427337 - Crash when rebuilding thumbnails or fingerprints.
349 ==> 438465 - Question to Color Spaces.
350 ==> 